feat: add iam module, add missing endpoints, improve structure and fix a lot of bugs