@@ -11,6 +11,7 @@ import com.axiora.spotgo.parking.application.internal.queryservices.ParkingQuery
 import com.axiora.spotgo.parking.interfaces.rest.resources.ClientReportResource;
 import com.axiora.spotgo.parking.interfaces.rest.resources.CreateClientReportResource;
 import com.axiora.spotgo.parking.interfaces.rest.resources.UpdateClientReportStatusResource;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import io.swagger.v3.oas.annotations.Operation;
@@ -22,7 +23,6 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/clientReports")
@@ -44,7 +44,7 @@ public class ClientReportsController {
                     content = @Content(schema = @Schema(implementation = ClientReportResource.class))),
             @ApiResponse(responseCode = "400", description = "Invalid input")
     })
-    public ResponseEntity<ClientReportResource> createClientReport(@RequestBody CreateClientReportResource resource) {
+    public ResponseEntity<ClientReportResource> createClientReport(@Valid @RequestBody CreateClientReportResource resource) {
         var command = new CreateClientReportCommand(
                 resource.clientId(),
                 resource.parkingId(),
@@ -67,7 +67,7 @@ public class ClientReportsController {
         var reports = parkingQueryService.handle(new GetAllClientReportsQuery());
         var resources = reports.stream()
                 .map(this::toResource)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(resources);
     }
 
@@ -79,8 +79,8 @@ public class ClientReportsController {
             @ApiResponse(responseCode = "400", description = "Invalid status value or report not found")
     })
     public ResponseEntity<ClientReportResource> updateClientReportStatus(
-            @PathVariable Long reportId,
-            @RequestBody UpdateClientReportStatusResource resource) {
+            @PathVariable String reportId,
+            @Valid @RequestBody UpdateClientReportStatusResource resource) {
         var command = new UpdateClientReportStatusCommand(reportId, ReportStatus.fromDisplayName(resource.status()));
         var reportOptional = parkingCommandService.handle(command);
         if (reportOptional.isEmpty()) {
@@ -92,11 +92,12 @@ public class ClientReportsController {
     private ClientReportResource toResource(ClientReport report) {
         return new ClientReportResource(
                 report.getId(),
+                report.getCode(),
                 report.getClientId(),
                 report.getParkingId(),
                 report.getReservationId(),
                 report.getType().getDisplayName(),
-                report.getDate(),
+                report.getDate().toString(),
                 report.getStatus().getDisplayName()
         );
     }
