@@ -10,6 +10,7 @@ import com.axiora.spotgo.parking.application.internal.commandservices.ParkingCom
 import com.axiora.spotgo.parking.application.internal.queryservices.ParkingQueryService;
 import com.axiora.spotgo.parking.interfaces.rest.resources.DetectedSpotResource;
 import com.axiora.spotgo.parking.interfaces.rest.resources.CreateDetectedSpotResource;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import io.swagger.v3.oas.annotations.Operation;
@@ -21,7 +22,6 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/detectedSpots")
@@ -41,8 +41,8 @@ public class DetectedSpotsController {
     @ApiResponse(responseCode = "200", description = "List of detected spots returned",
             content = @Content(schema = @Schema(implementation = DetectedSpotResource.class)))
     public ResponseEntity<List<DetectedSpotResource>> getAllDetectedSpots(
-            @RequestParam(required = false) Long parkingId,
-            @RequestParam(required = false) Long blueprintId) {
+            @RequestParam(required = false) String parkingId,
+            @RequestParam(required = false) String blueprintId) {
         List<DetectedSpot> spots;
         if (parkingId != null) {
             spots = parkingQueryService.handle(new GetDetectedSpotsByParkingIdQuery(parkingId));
@@ -53,7 +53,7 @@ public class DetectedSpotsController {
         }
         var resources = spots.stream()
                 .map(this::toResource)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(resources);
     }
 
@@ -64,11 +64,11 @@ public class DetectedSpotsController {
                     content = @Content(schema = @Schema(implementation = DetectedSpotResource.class))),
             @ApiResponse(responseCode = "404", description = "Blueprint not found")
     })
-    public ResponseEntity<List<DetectedSpotResource>> getSpotsByBlueprintId(@PathVariable Long blueprintId) {
+    public ResponseEntity<List<DetectedSpotResource>> getSpotsByBlueprintId(@PathVariable String blueprintId) {
         var spots = parkingQueryService.handle(new GetSpotsByBlueprintIdQuery(blueprintId));
         var resources = spots.stream()
                 .map(this::toResource)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(resources);
     }
 
@@ -78,7 +78,7 @@ public class DetectedSpotsController {
             @ApiResponse(responseCode = "200", description = "Status updated successfully"),
             @ApiResponse(responseCode = "400", description = "Invalid status value")
     })
-    public ResponseEntity<Void> updateSpotStatus(@PathVariable Long spotId, @RequestParam String status) {
+    public ResponseEntity<Void> updateSpotStatus(@PathVariable String spotId, @RequestParam String status) {
         var spotStatus = SpotStatus.fromDisplayName(status);
         var command = new UpdateSpotStatusCommand(spotId, spotStatus);
         var updatedSpotOptional = parkingCommandService.handle(command);
@@ -95,10 +95,10 @@ public class DetectedSpotsController {
                     content = @Content(schema = @Schema(implementation = DetectedSpotResource.class))),
             @ApiResponse(responseCode = "400", description = "Invalid input")
     })
-    public ResponseEntity<DetectedSpotResource> createDetectedSpot(@RequestBody CreateDetectedSpotResource resource) {
+    public ResponseEntity<DetectedSpotResource> createDetectedSpot(@Valid @RequestBody CreateDetectedSpotResource resource) {
         var status = SpotStatus.fromDisplayName(resource.status());
         var command = new com.axiora.spotgo.parking.domain.model.commands.CreateDetectedSpotCommand(
-                resource.localId(), resource.blueprintId(), resource.parkingId(),
+                resource.code(), resource.blueprintId(), resource.parkingId(),
                 resource.row(), resource.col(),
                 resource.xPct(), resource.yPct(), resource.wPct(), resource.hPct(),
                 status);
@@ -113,7 +113,7 @@ public class DetectedSpotsController {
     private DetectedSpotResource toResource(DetectedSpot spot) {
         return new DetectedSpotResource(
                 spot.getId(),
-                spot.getLocalId(),
+                spot.getCode(),
                 spot.getBlueprintId(),
                 spot.getParkingId(),
                 spot.getRow(),
